Proyecto1_Fase2/Kubernetes/api-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
      - name: api-python
        image: josmalopez/api_python:1.1
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api-python-service
spec:
  selector:
    app: api-python 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
