Proyecto1_Fase2/Kubernetes/api-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rest
  template:
    metadata:
      labels:
        app: api-rest
    spec:
      containers:
      - name: api-rest
        image: josmalopez/api_rest:1.1
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: api-rest-service
spec:
  selector:
    app: api-rest 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
