Proyecto1_Fase2/Kubernetes/api-soclet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
      - name: socket
        image: josmalopez/socket:1.1
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
