Proyecto1_Fase2/Kubernetes/ingress-main.yaml
# Ingress principal para API Python
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-main
  namespace: so1-fase2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Ruta para API Python
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-python-service
                port:
                  number: 80

          # Ruta para WebSocket
          - path: /socket
            pathType: ImplementationSpecific
            backend:
              service:
                name: socket-service
                port:
                  number: 4000
---
# Ingress canary para API NodeJS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-canary
  namespace: so1-fase2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-rest-service
                port:
                  number: 80
